[INJIVER-1439] - fix test
Signed-off-by: sarupmoni <93664377+sarupmoni@users.noreply.github.com>